--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0-alpha1'
+        // Includes plugin needed to use Firebase
         classpath 'com.google.gms:google-services:3.0.0'
 
 
