--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,24 +10,32 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        signingConfigs {
+            release {
+                storeFile file("Busify.keystore")
+                storePassword "busify"
+                keyAlias "busify"
+                keyPassword "busify"
+            }
         }
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            }
+        }
+
     }
-}
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        testCompile 'junit:junit:4.12'
+        compile 'com.android.support:appcompat-v7:23.3.0'
 // Adds dependencies for Firebase SDKs needed
-    compile 'com.google.firebase:firebase-database:9.0.0'
-    compile 'com.google.firebase:firebase-storage:9.0.0'
+        compile 'com.google.firebase:firebase-database:9.0.0'
+        compile 'com.google.firebase:firebase-storage:9.0.0'
 
-}
+    }
 // Enables the Gradle plugin
-apply plugin: 'com.google.gms.google-services'
-
+    apply plugin: 'com.google.gms.google-services'
+}
